@@ -1401,14 +1401,14 @@ int	RUN_COMMAND(const char *cmd, const char *param, unsigned flags, AGENT_RESULT
 
 #else /* not _WINDOWS */
 
-	pid = fork(); /* run new thread 1 */
+	pid = zbx_fork(); /* run new thread 1 */
 	switch(pid)
 	{
 	case -1:
 		zabbix_log(LOG_LEVEL_WARNING, "fork failed for command '%s'",command);
 		return SYSINFO_RET_FAIL;
 	case 0:
-		pid = fork(); /* run new tread 2 to replace by command */
+		pid = zbx_fork(); /* run new tread 2 to replace by command */
 		switch(pid)
 		{
 		case -1:
